implemented posiiblility to get data on daily bases